--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongodb": "^4.7.0"
+    "mongodb": "^4.7.0",
+    "nodemailer": "^6.7.7",
+    "nodemailer-mailgun-transport": "^2.1.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
